--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>">
 
+    <!-- TODO: Test if this is needed -->
+    <meta name="theme-color" content="#155195" id="theme-color-meta">
+
     <link rel="icon" type="image/png" sizes="512x512" href="icons/icon-512.png">
     <link rel="icon" type="image/png" sizes="128x128" href="icons/icon-128.png">
     <link rel="icon" type="image/png" sizes="96x96" href="icons/icon-96.png">
